Final section completed

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Tajam Home</title>
-    <link rel="stylesheet" href="css/style.css">
+    
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/fontawesome.min.css">
 </head>
 <body>
 
@@ -277,6 +280,66 @@
 <!-------------------------eighth-Section End------------------------------------------->
 
 <!-------------------------ninth-Section Start------------------------------------------->
+<div class="full-wrapper ninth-section">
+    <div class="wrapper Cominfo-footer">
+        <div class="footer-content">
+            <div class="footer-item">
+                <img src="images/Logo.png">
+                <p>lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis 
+                    sem nibh elit. Duis sed odio 
+                    sit amet auctror a ornare odio non mauris vitae erat in elit</p>
+            </div>
+            <div class="footer-item">
+                <h3>OUR STUDIO</h3>
+                <address>
+                    Ruko cucruk, Jl.<br> Radio luar dalem jos <br> No.12 - 13, Kalideres - Jakarta Barat<br>
+                    11480 - Indonesia
+                </address>
+
+            </div>
+
+            <div class="footer-item">
+                <h3>STAY IN TOUCH</h3>
+                <form>
+                    <input type="email" value="Subscribe our newsletter">
+                    <button><img src="images/Btn.png" alt="Subscribe button"></button>
+                </form>
+                <ul>
+                    <li><img src="images/facebook.png"></li>
+                    <li><img src="images/twitter.png"></li>
+                    <li><img src="images/dribbble.png"></li>
+                    <li><img src="images/instagram.png"></li>
+                    <li><img src="images/gplus.png"></li>
+                    <li><img src="images/youtube.png"></li>
+                </ul>
+
+            </div>
+        </div>
+
+        <div class="footer-bootom">
+            <div class="bootom-left">
+                <ul>                 
+                    <li><a href="#"></a>HELP</li>
+                    <li><a href="#"></a>TERMS & CONDITION</li>
+                    <li><a href="#"></a>PRIVACY</li>
+                </ul>
+            </div>
+            <div class="bootom-right">
+                <p>Copyright © 2015 - Tajem Creative </p>
+            </div>
+
+        </div>
+
+
+        
+
+    </div>
+
+
+</div>
+
+
+
 <!-------------------------ninth-Section End------------------------------------------->
 
 
