--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <input type="text" id="Name" name="Name" value="Name"><br><br>
             <input type="text" id="Name" name="Name" value="Email"><br><br>
             <input type="text" id="Name" name="Name" value="Subject"><br><br>
-            <textarea name="message" rows="10" cols="30">Your Message</textarea>
+            <textarea name="message" rows="10" cols="61">Your Message</textarea>
                 <br><br>
             <input type="submit">
             
@@ -292,8 +292,8 @@
             <div class="footer-item">
                 <h3>OUR STUDIO</h3>
                 <address>
-                    Ruko cucruk, Jl.<br> Radio luar dalem jos <br> No.12 - 13, Kalideres - Jakarta Barat<br>
-                    11480 - Indonesia
+                    <img src="images/Address.png"><br><br><br>
+                    <img src="images/phone.png">
                 </address>
 
             </div>
